Allow unsafe usage in BigQuery and Snowflake connectors
This is required for Apache Arrow to work correctly with Netty 4.1.120+